--- a/src/app/recipes/recipes.page.html
+++ b/src/app/recipes/recipes.page.html
@@ -4,5 +4,15 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let recipe of recipes">
+      <ion-avatar slot="start">
+        <ion-img [src]="recipe.imageUrl"></ion-img>
+      </ion-avatar>
+      <ion-label>
+        {{ recipe.title }}
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
