--- a/src/app/recipes/recipe-detail/recipe-detail.page.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.page.html
@@ -1,14 +1,27 @@
 <ion-header>
   <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/recipes"></ion-back-button>
+    </ion-buttons>
     <ion-title>{{ loadedRecipe?.title}}</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button id="delete-recipe"><ion-icon name="trash" slot="icon-only"></ion-icon></ion-button>
+      <ion-alert
+        trigger="delete-recipe"
+        header="Are you sure?"
+        message="Do you really want to delete the recipe?"
+        [buttons]="alertButtons"
+      ></ion-alert>
+    </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid>
+  <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col class="ion-no-padding">
-        <ion-img [src]="loadedRecipe?.imageUrl"></ion-img>
+        <ion-img [ngStyle]="{width: '100%'}" [src]="loadedRecipe?.imageUrl"></ion-img>
       </ion-col>
     </ion-row>
     <ion-row>
